--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Arif Billah</title>
+    <title>দ্বীনদার পাত্র/পাত্রীর সন্ধান</title>
     <link rel="stylesheet" href="./My Framework.css" />
   </head>
   <body>
