--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       content="Web site created using create-react-app"
     />
     <title>দ্বীনদার পাত্র/পাত্রীর সন্ধান</title>
+    <link rel="icon" href="./titleLogo.png" />
     <link rel="stylesheet" href="./My Framework.css" />
   </head>
   <body>
